# Generated by Django 4.2.20 on 2025-05-06 03:16

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="AccessLog",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("path", models.CharField(max_length=255, verbose_name="请求路径")),
                ("method", models.CharField(max_length=10, verbose_name="请求方法")),
                (
                    "status_code",
                    models.PositiveIntegerField(
                        blank=True, null=True, verbose_name="状态码"
                    ),
                ),
                (
                    "ip_address",
                    models.GenericIPAddressField(
                        blank=True, null=True, verbose_name="IP地址"
                    ),
                ),
                ("user_agent", models.TextField(blank=True, verbose_name="用户代理")),
                (
                    "referer",
                    models.URLField(
                        blank=True, max_length=255, verbose_name="来源页面"
                    ),
                ),
                ("query_params", models.TextField(blank=True, verbose_name="查询参数")),
                (
                    "response_time",
                    models.FloatField(
                        blank=True, null=True, verbose_name="响应时间(ms)"
                    ),
                ),
                (
                    "timestamp",
                    models.DateTimeField(auto_now_add=True, verbose_name="访问时间"),
                ),
                (
                    "user",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="access_logs",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="用户",
                    ),
                ),
            ],
            options={
                "verbose_name": "访问日志",
                "verbose_name_plural": "访问日志",
                "ordering": ["-timestamp"],
                "indexes": [
                    models.Index(
                        fields=["timestamp"], name="logs_access_timesta_cd1f65_idx"
                    ),
                    models.Index(
                        fields=["user"], name="logs_access_user_id_2a6728_idx"
                    ),
                    models.Index(fields=["path"], name="logs_access_path_d92864_idx"),
                    models.Index(
                        fields=["status_code"], name="logs_access_status__f40259_idx"
                    ),
                ],
            },
        ),
    ]
